# anvil_blob_repro

./: Cargo.toml
src/: main.rs
