[package]
name = "anvil_blob_repro"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["ipc"] }
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.28"
alloy-node-bindings = { git = "https://github.com/alloy-rs/alloy", version = "0.2" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", version = "0.2", features = ["kzg"] }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", version = "0.2" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", version = "0.2" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", version = "0.2" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", version = "0.2" }
